--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ p span {
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 .start-overlay .start-info {
@@ -400,10 +400,15 @@ p span {
   border-radius: 10px;
   box-shadow: 2px 2px 2px #0b3220;
   background-color: #257D3E;
-  border: 1px solid #257D3e;
+  border: 2px solid #257D3e;
   color: white;
   text-transform: uppercase;
   font-size: 20px;
+  outline: none;
+}
+
+.start-overlay .enter-button:focus, .start-overlay .enter-button:hover, .start-overlay .start-button:focus, .start-overlay .start-button:hover {
+  border: 2px solid white;
 }
 
 @media all and (max-width: 570px) {
@@ -412,14 +417,46 @@ p span {
   }
 }
 
-.start-overlay .yourScore {
-  display: none;
-  color: #fff;
+.start-overlay .top-scores {
+  margin: 0 auto;
+  max-width: 265px;
 }
 
-.start-overlay .allScore {
+.start-overlay .top-scores .yourScore {
+  display: none;
+  margin-top: 90px;
+  text-align: center;
+  color: #fff;
+  font-size: 30px;
+}
+
+@media all and (max-width: 570px) {
+  .start-overlay .top-scores .yourScore {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+}
+
+.start-overlay .top-scores .yourScore span {
+  font-size: 34px;
+}
+
+@media all and (max-width: 570px) {
+  .start-overlay .top-scores .yourScore span {
+    font-size: 24px;
+  }
+}
+
+.start-overlay .top-scores .allScore {
   display: none;
   color: #fff;
+  font-size: 20px;
+}
+
+.start-overlay .top-scores .allScore span {
+  display: inline-block;
+  margin-bottom: 5px;
+  border-bottom: 1px solid white;
 }
 
 .start-overlay footer {
@@ -646,6 +683,7 @@ p span {
 
 .counter {
   font-size: 35px;
+  text-align: center;
 }
 
 .counter p {
